--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -12,3 +12,7 @@
 //$link-color: #337ab7;
 //$footer-text-color: #000000;
 $indicatorContent-horizontalRule-color: transparent;
+
+$focusColor: initial !important;
+$focusBackgroundColor: initial !important;
+$focusOutlineColor: initial !important;
